RESOLVED FIXED109285
[Curl] setCookiesFromDOM function does not save cookies to disk.
https://bugs.webkit.org/show_bug.cgi?id=109285
Summary [Curl] setCookiesFromDOM function does not save cookies to disk.
peavo
Reported 2013-02-08 04:23:08 PST
The function setCookiesFromDOM in Source/WebCore/platform/network/curl/CookieJarCurl.cpp does not save cookies to disk, only in a hash table in memory.
Attachments
Patch (3.64 KB, patch)
2013-02-08 04:50 PST, peavo
no flags
Patch (4.20 KB, patch)
2013-02-11 04:31 PST, peavo
no flags
peavo
Comment 1 2013-02-08 04:50:01 PST
Brent Fulgham
Comment 2 2013-02-08 09:17:00 PST
Comment on attachment 187292 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=187292&action=review Very nice update. Please switch to an "early return" style for that one method, since no other actions are taken in the case where the CURL handle is null. > Source/WebCore/platform/network/curl/CookieJarCurl.cpp:37 > + if (curl) { Please make this an early return, since we do nothing if the curl interface is not present.
peavo
Comment 3 2013-02-11 04:31:27 PST
peavo
Comment 4 2013-02-11 04:34:19 PST
Updated patch according to the review comments, and set Curl option to share the Curl cookie database, when adding the cookie.
Brent Fulgham
Comment 5 2013-02-11 20:29:52 PST
Comment on attachment 187545 [details] Patch Looks great! Thanks for getting this working.
WebKit Review Bot
Comment 6 2013-02-11 20:35:59 PST
Comment on attachment 187545 [details] Patch Clearing flags on attachment: 187545 Committed r142574: <http://trac.webkit.org/changeset/142574>
WebKit Review Bot
Comment 7 2013-02-11 20:36:02 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 8 2013-02-11 23:49:16 PST
(In reply to comment #5) > (From update of attachment 187545 [details]) > Looks great! Thanks for getting this working. Thanks alot for the review ;)
Note You need to log in before you can comment on or make changes to this bug.